Tests/Good/Listes/expr.tig
for i:=0 to 10 do ("bonjour"), while a<10 do(a+1)