Tests/Bad/For/for4.tig
for i:=7 to 3 ("bonjour")